# AI-Enhanced-Monte-Carlo-Simulation-for-Financial-Risk-Assessment

./: evaluator.py  readme.md  requirements.txt  setup_monte_carlo.sh
artifacts/metrics/: evaluation_report_test.txt  evaluation_report_val.txt  monte_carlo_run_20251007_015952.json  monte_carlo_run_20251007_021632.json  monte_carlo_run_20251007_100228.json  pipeline_summary.json  training_summary_20251007_015930.json  training_summary_20251007_021052.json  training_summary_20251007_021620.json  training_summary_20251007_100143.json  tuning_results_randomized.json
artifacts/models/: best_xgboost_model.pkl
configs/: credit_preprocessing_config.json
docs/: datapreprocessing.md
notebooks/: credit_risk_pipeline.ipynb
scripts/: run_monte_carlo_simulation.py  train_xgboost_model.py
src/: data_loader.py  hyperparameter_tuner.py  main_training.py  monte_carlo_demo.py  monte_carlo_wrapper.py  performance_benchmark.py  threshold_optimizer.py  xgboost_model.py
src/monte_carlo/: CMakeLists.txt  monte_carlo_engine.cpp  python_interface.cpp  risk_calculator.cpp  scenario_generator.cpp  test_main.cpp
src/monte_carlo/include/: monte_carlo_engine.h  monte_carlo_types.h  risk_calculator.h  scenario_generator.h
